# geotab_agent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  setup_repo.ps1  subir_cambios_github.txt
input_addin/: config.json  es.json  index.html  script.js  style.css
output/addin_20250811_233758/: config.json  index.html  script.js  style.css
output/addin_20250811_235456/: config.json  index.html  script.js  style.css
output/addin_20250812_005404/: config.json  index.html  script.js  style.css
output/addin_20250812_005928/: config.json  index.html  script.js  style.css
output/addin_20250812_010404/: config.json  index.html  script.js  style.css
output/addin_20250812_010406/: config.json  index.html  script.js  style.css
output/addin_20250812_011119/: config.json  index.html  script.js  style.css
output/addin_20250812_012249/: config.json  index.html  script.js  style.css
output/addin_20250812_012835/: config.json  index.html  script.js  style.css
output/addin_20250812_130900/: config.json  index.html  script.js  style.css
output/addin_20250812_130904/: config.json  index.html  script.js  style.css
output/addin_20250812_133544/: config.json  index.html  script.js  style.css
output/addin_20250812_153205/: config.json  index.html  script.js  style.css
output/addin_20250812_154759/: config.json  index.html  script.js  style.css
output/addin_20250812_155531/: config.json  index.html  script.js  style.css
output/addin_20250812_155532/: config.json  index.html  script.js  style.css
output/addin_20250812_155826/: config.json  script.js  (+1 more)
(+40 files in other folders)
